gen/ComponentParser.java
// Generated from C:/Users/Lenovo/IdeaProjects/angular/src/Antlr/ComponentParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ComponentParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, FROM=2, EXPORT=3, AT_COMPONENT=4, SELECTOR_KEYWORD=5, STANDALONE=6, 
		IMPORTS=7, TEMPLATE=8, CLASS=9, STYLES=10, FUNCTION=11, STRING_TYPE=12, 
		NUMBER_TYPE=13, ANY_TYPE=14, BOOLEAN_LITERAL=15, NUMBER_LITERAL=16, STRING_LITERAL=17, 
		COMMA=18, COLON=19, DOT=20, SEMICOLON=21, EQUAL=22, THIS=23, LEFT_CURLY=24, 
		RIGHT_CURLY=25, LEFT_PAREN=26, RIGHT_PAREN=27, LEFT_BRACKET=28, RIGHT_BRACKET=29, 
		LESS_THAN=30, GREAND_THAN=31, WS=32, IDENTIFIER=33, HHTML_COMMENT=34, 
		SPACE=35, SRC_ATTRIBUTE=36, ATTRIBUTE_NAME=37, HTML_TAG_OPEN_DIV=38, HTML_TAG_CLOSE_DIV=39, 
		HTML_TAG_OPEN_H2=40, HTML_TAG_CLOSE_H2=41, HTML_TAG_OPEN_IMG=42, HTML_TAG_OPEN_SLASH=43, 
		HTML_TAG_CLOSE_IMG=44, HTML_TAG_OPEN_P=45, HTML_TAG_CLOSE_P=46, HTML_TAG_OPEN_BUTTON=47, 
		HTML_TAG_CLOSE_BUTTON=48, HTML_TAG_OPEN_SPAN=49, HTML_TAG_CLOSE_SPAN=50, 
		CUSTOM_DIRECTIVE=51, EVENT_BINDING=52, ALT_ATTRIBUTE=53, HTML_TAG_OPEN=54, 
		HTML_TAG_CLOSE=55, HTML_SELF_CLOSING_TAG=56, DYNAMIC_CONTENT=57, PLUS=58, 
		MINUS=59, MULTIPLY=60, DIV=61, MODULUS=62, ATTRIBUTE_VALUE=63, STYLE_ATTRIBUTE=64, 
		HTML_ATTRIBUTE=65, BACKTICK=66, DYNAMIC_ATTRIBUTE=67, BACKTICK_STRING=68, 
		PLUS_ASSIGN=69, MINUS_ASSIGN=70, HTML_TAG_SELF_CLOSING=71;
	public static final int
		RULE_component = 0, RULE_importStatements = 1, RULE_importStatement = 2, 
		RULE_componentConfig = 3, RULE_classDeclaration = 4, RULE_classBody = 5, 
		RULE_assignment = 6, RULE_expression = 7, RULE_primaryExpression = 8, 
		RULE_arrayAccess = 9, RULE_literal = 10, RULE_fieldDeclaration = 11, RULE_variableDeclaration = 12, 
		RULE_methodDeclaration = 13, RULE_parameterList = 14, RULE_parameter = 15, 
		RULE_type = 16, RULE_block = 17, RULE_value = 18, RULE_parameters = 19, 
		RULE_variableName = 20, RULE_methodName = 21, RULE_className = 22, RULE_array = 23, 
		RULE_jsonObject = 24, RULE_pair = 25, RULE_statement = 26, RULE_thisAccess = 27, 
		RULE_componentHTMLContent = 28, RULE_htmlElement = 29, RULE_openTagElement = 30, 
		RULE_divElement = 31, RULE_h2Element = 32, RULE_imgElement = 33, RULE_pElement = 34, 
		RULE_genericElement = 35, RULE_buttonElement = 36, RULE_spanElement = 37, 
		RULE_dynamicAttribute = 38, RULE_htmlAttribute = 39, RULE_dynamicContent = 40, 
		RULE_htmlContent = 41, RULE_htmlAttributes = 42, RULE_customDirective = 43, 
		RULE_eventBinding = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"component", "importStatements", "importStatement", "componentConfig", 
			"classDeclaration", "classBody", "assignment", "expression", "primaryExpression", 
			"arrayAccess", "literal", "fieldDeclaration", "variableDeclaration", 
			"methodDeclaration", "parameterList", "parameter", "type", "block", "value", 
			"parameters", "variableName", "methodName", "className", "array", "jsonObject", 
			"pair", "statement", "thisAccess", "componentHTMLContent", "htmlElement", 
			"openTagElement", "divElement", "h2Element", "imgElement", "pElement", 
			"genericElement", "buttonElement", "spanElement", "dynamicAttribute", 
			"htmlAttribute", "dynamicContent", "htmlContent", "htmlAttributes", "customDirective", 
			"eventBinding"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'from'", "'export'", "'@Component'", "'selector'", 
			"'standalone'", "'imports'", "'template'", "'class'", "'styles'", "'function'", 
			"'string'", "'number'", "'any'", null, null, null, "','", "':'", "'.'", 
			"';'", "'='", "'this'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'<'", 
			"'>'", null, null, null, null, null, null, null, "'</div>'", "'<h2>'", 
			"'</h2>'", "'<img'", "'</'", "'/>'", "'<p>'", "'</p>'", "'<button'", 
			"'</button>'", null, "'</span>'", null, null, null, null, null, null, 
			null, "'+'", "'-'", "'*'", "'/'", "'%'", null, null, null, "'`'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "FROM", "EXPORT", "AT_COMPONENT", "SELECTOR_KEYWORD", 
			"STANDALONE", "IMPORTS", "TEMPLATE", "CLASS", "STYLES", "FUNCTION", "STRING_TYPE", 
			"NUMBER_TYPE", "ANY_TYPE", "BOOLEAN_LITERAL", "NUMBER_LITERAL", "STRING_LITERAL", 
			"COMMA", "COLON", "DOT", "SEMICOLON", "EQUAL", "THIS", "LEFT_CURLY", 
			"RIGHT_CURLY", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", 
			"LESS_THAN", "GREAND_THAN", "WS", "IDENTIFIER", "HHTML_COMMENT", "SPACE", 
			"SRC_ATTRIBUTE", "ATTRIBUTE_NAME", "HTML_TAG_OPEN_DIV", "HTML_TAG_CLOSE_DIV", 
			"HTML_TAG_OPEN_H2", "HTML_TAG_CLOSE_H2", "HTML_TAG_OPEN_IMG", "HTML_TAG_OPEN_SLASH", 
			"HTML_TAG_CLOSE_IMG", "HTML_TAG_OPEN_P", "HTML_TAG_CLOSE_P", "HTML_TAG_OPEN_BUTTON", 
			"HTML_TAG_CLOSE_BUTTON", "HTML_TAG_OPEN_SPAN", "HTML_TAG_CLOSE_SPAN", 
			"CUSTOM_DIRECTIVE", "EVENT_BINDING", "ALT_ATTRIBUTE", "HTML_TAG_OPEN", 
			"HTML_TAG_CLOSE", "HTML_SELF_CLOSING_TAG", "DYNAMIC_CONTENT", "PLUS", 
			"MINUS", "MULTIPLY", "DIV", "MODULUS", "ATTRIBUTE_VALUE", "STYLE_ATTRIBUTE", 
			"HTML_ATTRIBUTE", "BACKTICK", "DYNAMIC_ATTRIBUTE", "BACKTICK_STRING", 
			"PLUS_ASSIGN", "MINUS_ASSIGN", "HTML_TAG_SELF_CLOSING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ComponentParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ComponentParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
	 
		public ComponentContext() { }
		public void copyFrom(ComponentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDefinitionContext extends ComponentContext {
		public TerminalNode AT_COMPONENT() { return getToken(ComponentParser.AT_COMPONENT, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(ComponentParser.LEFT_PAREN, 0); }
		public ComponentConfigContext componentConfig() {
			return getRuleContext(ComponentConfigContext.class,0);
		}
		public ImportStatementsContext importStatements() {
			return getRuleContext(ImportStatementsContext.class,0);
		}
		public ComponentDefinitionContext(ComponentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).enterComponentDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).exitComponentDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComponentParserVisitor ) return ((ComponentParserVisitor<? extends T>)visitor).visitComponentDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_component);
		int _la;
		try {
			_localctx = new ComponentDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(90);
				importStatements();
				}
			}

			setState(93);
			match(AT_COMPONENT);
			setState(94);
			match(LEFT_PAREN);
			setState(95);
			componentConfig();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementsContext extends ParserRuleContext {
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ComponentParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ComponentParser.SEMICOLON, i);
		}
		public ImportStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).enterImportStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).exitImportStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComponentParserVisitor ) return ((ComponentParserVisitor<? extends T>)visitor).visitImportStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementsContext importStatements() throws RecognitionException {
		ImportStatementsContext _localctx = new ImportStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				importStatement();
				setState(98);
				match(SEMICOLON);
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ComponentParser.IMPORT, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(ComponentParser.LEFT_CURLY, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ComponentParser.IDENTIFIER, 0); }
		public TerminalNode RIGHT_CURLY() { return getToken(ComponentParser.RIGHT_CURLY, 0); }
		public TerminalNode FROM() { return getToken(ComponentParser.FROM, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(ComponentParser.STRING_LITERAL, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComponentParserVisitor ) return ((ComponentParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(IMPORT);
			setState(105);
			match(LEFT_CURLY);
			setState(106);
			match(IDENTIFIER);
			setState(107);
			match(RIGHT_CURLY);
			setState(108);
			match(FROM);
			setState(109);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentConfigContext extends ParserRuleContext {
		public ComponentConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentConfig; }
	 
		public ComponentConfigContext() { }
		public void copyFrom(ComponentConfigContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentConfiggContext extends ComponentConfigContext {
		public TerminalNode LEFT_CURLY() { return getToken(ComponentParser.LEFT_CURLY, 0); }
		public TerminalNode SELECTOR_KEYWORD() { return getToken(ComponentParser.SELECTOR_KEYWORD, 0); }
		public List<TerminalNode> COLON() { return getTokens(ComponentParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ComponentParser.COLON, i);
		}
		public List<TerminalNode> STRING_LITERAL() { return getTokens(ComponentParser.STRING_LITERAL); }
		public TerminalNode STRING_LITERAL(int i) {
			return getToken(ComponentParser.STRING_LITERAL, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ComponentParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ComponentParser.COMMA, i);
		}
		public TerminalNode STANDALONE() { return getToken(ComponentParser.STANDALONE, 0); }
		public TerminalNode BOOLEAN_LITERAL() { return getToken(ComponentParser.BOOLEAN_LITERAL, 0); }
		public TerminalNode IMPORTS() { return getToken(ComponentParser.IMPORTS, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(ComponentParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(ComponentParser.RIGHT_BRACKET, 0); }
		public TerminalNode TEMPLATE() { return getToken(ComponentParser.TEMPLATE, 0); }
		public List<TerminalNode> BACKTICK() { return getTokens(ComponentParser.BACKTICK); }
		public TerminalNode BACKTICK(int i) {
			return getToken(ComponentParser.BACKTICK, i);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(ComponentParser.RIGHT_CURLY, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(ComponentParser.RIGHT_PAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ComponentParser.IDENTIFIER, 0); }
		public List<HtmlElementContext> htmlElement() {
			return getRuleContexts(HtmlElementContext.class);
		}
		public HtmlElementContext htmlElement(int i) {
			return getRuleContext(HtmlElementContext.class,i);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public ComponentConfiggContext(ComponentConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).enterComponentConfigg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).exitComponentConfigg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComponentParserVisitor ) return ((ComponentParserVisitor<? extends T>)visitor).visitComponentConfigg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentConfigContext componentConfig() throws RecognitionException {
		ComponentConfigContext _localctx = new ComponentConfigContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_componentConfig);
		int _la;
		try {
			_localctx = new ComponentConfiggContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(LEFT_CURLY);
			setState(112);
			match(SELECTOR_KEYWORD);
			setState(113);
			match(COLON);
			setState(114);
			match(STRING_LITERAL);
			setState(115);
			match(COMMA);
			setState(116);
			match(STANDALONE);
			setState(117);
			match(COLON);
			setState(118);
			match(BOOLEAN_LITERAL);
			setState(119);
			match(COMMA);
			setState(120);
			match(IMPORTS);
			setState(121);
			match(COLON);
			setState(122);
			match(LEFT_BRACKET);
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING_LITERAL:
				{
				setState(123);
				match(STRING_LITERAL);
				}
				break;
			case IDENTIFIER:
				{
				setState(124);
				match(IDENTIFIER);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(125);
					match(COMMA);
					setState(126);
					match(STRING_LITERAL);
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case RIGHT_BRACKET:
				break;
			default:
				break;
			}
			setState(134);
			match(RIGHT_BRACKET);
			setState(135);
			match(COMMA);
			setState(136);
			match(TEMPLATE);
			setState(137);
			match(COLON);
			setState(138);
			match(BACKTICK);
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				htmlElement();
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 38)) & ~0x3f) == 0 && ((1L << (_la - 38)) & 8590527125L) != 0) );
			setState(144);
			match(BACKTICK);
			setState(145);
			match(COMMA);
			setState(146);
			match(RIGHT_CURLY);
			setState(147);
			match(RIGHT_PAREN);
			setState(149); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(148);
				classDeclaration();
				}
				}
				setState(151); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EXPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
	 
		public ClassDeclarationContext() { }
		public void copyFrom(ClassDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclContext extends ClassDeclarationContext {
		public TerminalNode EXPORT() { return getToken(ComponentParser.EXPORT, 0); }
		public TerminalNode CLASS() { return getToken(ComponentParser.CLASS, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public TerminalNode LEFT_CURLY() { return getToken(ComponentParser.LEFT_CURLY, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(ComponentParser.RIGHT_CURLY, 0); }
		public ClassDeclContext(ClassDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComponentParserVisitor ) return ((ComponentParserVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDeclaration);
		try {
			_localctx = new ClassDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(EXPORT);
			setState(154);
			match(CLASS);
			setState(155);
			className();
			setState(156);
			match(LEFT_CURLY);
			setState(157);
			classBody();
			setState(158);
			match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassBodyContext extends ParserRuleContext {
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
	 
		public ClassBodyContext() { }
		public void copyFrom(ClassBodyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassBodyyContext extends ClassBodyContext {
		public List<FieldDeclarationContext> fieldDeclaration() {
			return getRuleContexts(FieldDeclarationContext.class);
		}
		public FieldDeclarationContext fieldDeclaration(int i) {
			return getRuleContext(FieldDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public ClassBodyyContext(ClassBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).enterClassBodyy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComponentParserListener ) ((ComponentParserListener)listener).exitClassBodyy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComponentParserVisitor ) return ((ComponentParserVisitor<? extends T>)visitor).visitClassBodyy(this);
			else return visitor.visitChildren(this);
		}
	}
